--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+@import url("https://fonts.googleapis.com/css?family=Work+Sans:300,regular,500,600,&display=swap");
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
-    background-color: aquamarine;
+    font-family: 'Work Sans', sans-serif;
+    background-color: #f7f7f7;
+    color: aqua;
+}
+
+.container {
+    max-width: 1215px;
+    margin: 0px auto;
+    padding: 0 50px;
 }
