--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Work+Sans:300,regular,500,600,&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,600&display=swap");
 * {
     margin: 0;
     padding: 0;
@@ -6,13 +6,33 @@
 }
 
 body {
-    font-family: 'Work Sans', sans-serif;
-    background-color: #f7f7f7;
-    color: aqua;
+    font-family: 'Montserrat', sans-serif;
 }
 
 .container {
-    max-width: 1215px;
+    max-width: 1170px;
     margin: 0px auto;
-    padding: 0 50px;
+    padding: 0 15px;
+}
+
+.header {
+    padding: 12px 0;
+    
+}
+.container {
+}
+.header__logo {
+}
+.header__menu {
+}
+.menu__list {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 22px;  
+    color: #000000;
+}
+.menu__item {
+}
+.menu__link {
 }
