--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,600&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Montserrat:regular,500,600&display=swap");
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +7,7 @@
 
 body {
     font-family: 'Montserrat', sans-serif;
+    background-color: #fcfafa;
 }
 
 .container {
@@ -17,22 +18,32 @@ body {
 
 .header {
     padding: 12px 0;
-    
+    border-bottom: 3px solid #e7e7e7;
 }
 .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .header__logo {
 }
 .header__menu {
 }
 .menu__list {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 22px;  
-    color: #000000;
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 15px;
 }
-.menu__item {
+.menu__link:hover {
+    background: linear-gradient(99.05deg, #065ec2 0.07%, #487ac6 106.32%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
 }
 .menu__link {
+    font-weight: 500;
+    font-size: 18px;
+    color: #616060;
+    text-decoration: none;
 }
